--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -7,7 +7,7 @@
     <meta name="author" content="">
     <link rel="icon" href="../../favicon.ico">
 
-    <title>USKB @ AKBC 2020: {{page.title}}</title>
+    <title>ArgKG @ AKBC 2021: {{page.title}}</title>
 
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
@@ -51,11 +51,11 @@
 
 <div class="blog-header">
     <div class="container text-center">
-        <h1 class="blog-title">Unstructured and Structured KBs @ AKBC 2020</h1>
+        <h1 class="blog-title">Argumentative Knowledge Graphs @ AKBC 2021</h1>
         <p class="lead blog-description">
-            Workshop at <a href="https://www.akbc.ws/2020/">AKBC 2020</a><br/>
+            Workshop at <a href="https://www.akbc.ws/2021/">AKBC 2021</a><br/>
             June 25, 2020<br/>
-            Contact: <a href="mailto:akbc_structured@googlegroups.com">akbc_structured@googlegroups.com</a>
+            Contact: <a href="mailto:argknowg@gmail.com">argknowg@gmail.com</a>
         </p>
     </div>
 </div>
@@ -70,7 +70,7 @@
 
 </div><!-- /.container -->
 
-<footer class="blog-footer">
+<!-- <footer class="blog-footer">
     <p>
         <a href="https://github.com/uskb-workshop/uskb-workshop.github.io" class="footer-icon">
             <img height="24" width="24" src="https://unpkg.com/simple-icons@latest/icons/github.svg"/>
@@ -79,7 +79,7 @@
             <img height="24" width="24" src="https://unpkg.com/simple-icons@latest/icons/bootstrap.svg"/>
         </a>
     </p>
-</footer>
+</footer> -->
 
 
 <!-- Bootstrap core JavaScript
