--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -30,7 +30,7 @@
                     aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <span class="navbar-brand">USKB @ AKBC 2020</span>
+            <span class="navbar-brand">ArgKG @ AKBC 2021</span>
             <!--<div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
                     {% assign sorted_pages = site.pages | sort:"order" | where:"collection","pages_2019" %}
@@ -54,7 +54,7 @@
         <h1 class="blog-title">Argumentative Knowledge Graphs @ AKBC 2021</h1>
         <p class="lead blog-description">
             Workshop at <a href="https://www.akbc.ws/2021/">AKBC 2021</a><br/>
-            June 25, 2020<br/>
+            October 7, 2021<br/>
             Contact: <a href="mailto:argknowg@gmail.com">argknowg@gmail.com</a>
         </p>
     </div>
