--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -17,6 +17,12 @@
     <link href="css/main.css" rel="stylesheet">
     <link href="//fonts.googleapis.com/css?family=Roboto:400" rel="stylesheet">
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
+    <style>
+            div {
+                 text-align: justify;
+                 text-justify: inter-word;
+                }
+    </style>
 
 </head>
 
