--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -57,7 +57,7 @@
 
 <div class="blog-header">
     <div class="container text-center">
-        <h1 class="blog-title">Argumentative Knowledge Graphs @ AKBC 2021</h1>
+        <h1 class="blog-title">Argumentation Knowledge Graphs @ AKBC 2021</h1>
         <p class="lead blog-description">
             Workshop at <a href="https://www.akbc.ws/2021/">AKBC 2021</a><br/>
             October 7, 2021<br/>
