--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -61,7 +61,8 @@
         <p class="lead blog-description">
             Workshop at <a href="https://www.akbc.ws/2021/">AKBC 2021</a><br/>
             October 7, 2021<br/>
-            Twitter: <a href="https://twitter.com/argkgworkshop">@argkgworkshop</a>
+            Twitter: <a href="https://twitter.com/argkgworkshop">@argkgworkshop</a> <br/>
+            Contact: <a href="mailto:argkg@googlegroups.com">argkg@googlegroups.com</a>
         </p>
     </div>
 </div>
