--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -63,6 +63,7 @@
             October 7, 2021<br/>
             Twitter: <a href="https://twitter.com/argkgworkshop">@argkgworkshop</a> <br/>
             Contact: <a href="mailto:argkg@googlegroups.com">argkg@googlegroups.com</a>
+            <a href="https://argkg21.argmining.org/schedule.html">ArgKG @ AKBC 2021 Schedule</a>
         </p>
     </div>
 </div>
